# ghcp_sdk

./: .gitignore  GitHub-Copilot-SDK.pptx  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
docs/: index.html
examples/: 01_simple_chat.py  02_custom_tools.py  03_custom_agents.py  04_hooks.py  05_mcp_and_persistence.py  06_human_in_the_loop.py  README.md
